--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^17.0.1",
     "react-konva": "^17.0.0-0",
     "react-scripts": "4.0.0",
+    "typescript": "^4.0.3",
     "use-image": "^1.0.6",
     "web-vitals": "^0.2.4"
   },
